test/files/neg/t4749.check
t4749.scala:4: warning: Fail1 has a main method with parameter type Array[String], but bippy.Fail1 will not be a runnable program.
  Reason: main method must have exact signature (Array[String])Unit
    def main(args: Array[String]): Any = ()
        ^
t4749.scala:7: warning: Fail2 has a main method with parameter type Array[String], but bippy.Fail2 will not be a runnable program.
  Reason: main methods cannot be generic.
  object Fail2 {
         ^
t4749.scala:12: warning: Fail3 has a main method with parameter type Array[String], but bippy.Fail3 will not be a runnable program.
  Reason: main methods cannot refer to type parameters or abstract types.
    def main(args: Array[String]): T = null.asInstanceOf[T]
        ^
t4749.scala:17: warning: Fail4 has a main method with parameter type Array[String], but bippy.Fail4 will not be a runnable program.
  Reason: companion is a trait, which means no static forwarder can be generated.

  object Fail4 {
         ^
t4749.scala:22: warning: Fail5 has a main method with parameter type Array[String], but bippy.Fail5 will not be a runnable program.
  Reason: companion contains its own main method, which means no static forwarder can be generated.

  object Fail5 extends Fail5 { }
         ^
t4749.scala:27: warning: Fail6 has a main method with parameter type Array[String], but bippy.Fail6 will not be a runnable program.
  Reason: companion contains its own main method (implementation restriction: no main is allowed, regardless of signature), which means no static forwarder can be generated.

  object Fail6 {
         ^
t4749.scala:43: warning: Win3 has a main method with parameter type Array[String], but bippy.Win3 will not be a runnable program.
  Reason: main method must have exact signature (Array[String])Unit
  object Win3 extends WinBippy[Unit] { }
         ^
error: No warnings can be incurred under -Xfatal-warnings.
7 warnings found
one error found
